--- a/web/index.html
+++ b/web/index.html
@@ -25,9 +25,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="web/favicon..png" />
 
-  <title>Hamza</title>
+  <title>Aneesh</title>
   <link rel="manifest" href="manifest.json">
 
   <style>
